[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/npc_editor/npc_editor.gd" id="1"]

[node name="NpcEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.12, 0.14, 0.18, 1)

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="TopBar" type="HBoxContainer" parent="VBox"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="BackButton" type="Button" parent="VBox/TopBar"]
layout_mode = 2
text = "Back"

[node name="Title" type="Label" parent="VBox/TopBar"]
layout_mode = 2
text = "NPC Editor"

[node name="SaveButton" type="Button" parent="VBox/TopBar"]
layout_mode = 2
text = "Save NPC"

[node name="SaveAllButton" type="Button" parent="VBox/TopBar"]
layout_mode = 2
text = "Save All"

[node name="StatusLabel" type="Label" parent="VBox/TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Content" type="HBoxContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="ListPanel" type="PanelContainer" parent="VBox/Content"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ListVBox" type="VBoxContainer" parent="VBox/Content/ListPanel"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="SearchEdit" type="LineEdit" parent="VBox/Content/ListPanel/ListVBox"]
layout_mode = 2
placeholder_text = "Search..."

[node name="NpcListScroll" type="ScrollContainer" parent="VBox/Content/ListPanel/ListVBox"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="NpcListVBox" type="VBoxContainer" parent="VBox/Content/ListPanel/ListVBox/NpcListScroll"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 2

[node name="ListButtons" type="HBoxContainer" parent="VBox/Content/ListPanel/ListVBox"]
layout_mode = 2

[node name="NewButton" type="Button" parent="VBox/Content/ListPanel/ListVBox/ListButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "+ New"

[node name="DuplicateButton" type="Button" parent="VBox/Content/ListPanel/ListVBox/ListButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Duplicate"

[node name="DeleteButton" type="Button" parent="VBox/Content/ListPanel/ListVBox/ListButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Delete"

[node name="PropertyPanel" type="PanelContainer" parent="VBox/Content"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="PropertyScroll" type="ScrollContainer" parent="VBox/Content/PropertyPanel"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="PropertyVBox" type="VBoxContainer" parent="VBox/Content/PropertyPanel/PropertyScroll"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 4

[node name="HintBar" type="Label" parent="VBox"]
layout_mode = 2
